--- a/app/app.global.css
+++ b/app/app.global.css
@@ -10,5 +10,6 @@ body {
   background-color: #f3f3f3;
   font-family: Arial, Helvetica, Helvetica Neue, serif;
   overflow-y: hidden;
+  overflow-x: hidden;
   margin: 0;
 }
