--- a/app/containers/SidePannel.css
+++ b/app/containers/SidePannel.css
@@ -3,6 +3,7 @@
   width: 5vw;
   height: 99vh;
   text-align: center;
+  margin-bottom: 100px;
 }
 
 .container:hover {
@@ -15,7 +16,7 @@
 }
 ::-webkit-scrollbar-track {
   border-radius: 10px;
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.8);
+  box-shadow: inset 0 0 6px rgba(150, 150, 150, 0.8);
 }
 
 /* スクロールバーの動く部分 */
