--- a/app/components/MessageCard.css
+++ b/app/components/MessageCard.css
@@ -21,3 +21,16 @@
   margin: 15px;
   background-color: lightblue;
 }
+.unopen {
+  background-color: rgb(168, 168, 168);
+  width: 70%;
+  height: 50px;
+  box-shadow: 5px 5px 5px rgb(117, 117, 117);
+  transition: all 300ms 0s ease;
+  transition-timing-function: ease-in;
+}
+
+.unopen:hover {
+  width: 90%;
+  cursor: pointer;
+}
