--- a/app/containers/SidePannel.css
+++ b/app/containers/SidePannel.css
@@ -4,24 +4,20 @@
   height: 99vh;
   text-align: center;
   margin-bottom: 100px;
-}
-
-.container:hover {
-  overflow-y: scroll;
-  width: 6vw;
+  overflow-y: auto;
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 7px;
 }
 ::-webkit-scrollbar-track {
   border-radius: 10px;
-  box-shadow: inset 0 0 6px rgba(150, 150, 150, 0.8);
+  box-shadow: inset 0 0 1px rgba(150, 150, 150, 0.8);
 }
 
 /* スクロールバーの動く部分 */
 ::-webkit-scrollbar-thumb {
-  background-color: rgba(0, 0, 50, 0.5);
+  background-color: rgba(179, 179, 179, 0.5);
   border-radius: 10px;
   box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.3);
 }
