--- a/app/app.global.css
+++ b/app/app.global.css
@@ -3,6 +3,7 @@
  *        See https://github.com/webpack-contrib/sass-loader#imports
  */
 @import '~@fortawesome/fontawesome-free/css/all.css';
+@import '~react-draft-wysiwyg/dist/react-draft-wysiwyg.css';
 
 body {
   position: relative;
