--- a/app/components/Log.css
+++ b/app/components/Log.css
@@ -1,5 +1,35 @@
 .container {
-  position: absolute;
-  width: 95.5%;
-  height: 100%;
+  display: flex;
+  height: 97.6vh;
+  margin: 0;
+}
+
+.userList {
+  display: block;
+  width: 18vw;
+  min-width: 18vw;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.contentContainer {
+  width: 77vw;
+  overflow-y: auto;
+}
+
+.textwrap {
+  background-color: #f0f0f0;
+  width: inherit;
+  position: fixed;
+  bottom: 0;
+}
+
+.dump {
+  margin-bottom: 150px;
+}
+
+details {
+  border: 1px solid #aaa;
+  border-radius: 4px;
+  padding: 0.5em 0.5em 0;
 }
