--- a/app/components/UserCard.css
+++ b/app/components/UserCard.css
@@ -1,5 +1,22 @@
 .container {
   margin: 10px 5px 5px 5px;
-  list-style: none;
   cursor: pointer;
+  font-size: 20px;
+}
+
+.cap {
+  position: relative;
+  color: white;
+  left: 2px;
+  bottom: 5px;
+  border-radius: 5px;
+  background-color: rgb(255, 166, 0);
+  transition: all 300ms 0s ease;
+  transition-timing-function: ease-in;
+
+  padding: 2px;
+}
+
+.cap:hover {
+  background-color: rgb(255, 195, 31);
 }
