--- a/app/containers/SidePannel.css
+++ b/app/containers/SidePannel.css
@@ -5,8 +5,9 @@
   text-align: center;
   margin-bottom: 100px;
   overflow-y: auto;
+  overflow-x: hidden;
 
-  border-right: solid 1px;
+  background-color: rgb(31, 45, 58);
 }
 
 ::-webkit-scrollbar {
