--- a/app/app.global.css
+++ b/app/app.global.css
@@ -8,8 +8,9 @@ body {
   position: relative;
   height: 100vh;
   background-color: #f3f3f3;
-  font-family: Arial, Helvetica, Helvetica Neue, serif;
+  font-family: '游ゴシック体', YuGothic, '游ゴシック', 'Yu Gothic';
   overflow-y: hidden;
   overflow-x: hidden;
   margin: 0;
+  color: rgb(209, 209, 209);
 }
