--- a/app/components/Setting.css
+++ b/app/components/Setting.css
@@ -1,5 +1,12 @@
 .container {
-  display: flex;
-  height: 97.6vh;
   margin: 0;
+  display: block;
+
+  color: black;
+}
+
+.modalcont {
+  transition: all 300ms 0s ease;
+  transition-timing-function: ease-in;
+  padding: 2px;
 }
