--- a/app/components/UserSearch.scss
+++ b/app/components/UserSearch.scss
@@ -4,13 +4,16 @@
   display: block;
   transition: all 300ms 0s ease;
   transition-timing-function: ease-in;
-
+  max-height: 100px;
+  padding-bottom: 5px;
   border-bottom: solid 1px;
 }
 
 .container:hover {
+  max-height: 50vh;
   height: 50vh;
   overflow-y: auto;
+  animation: selecton 200ms ease 1 normal;
 
   .resultContainer {
     display: block;
@@ -22,10 +25,31 @@
   width: 15vw;
   height: 1.4rem;
 
+  border-radius: 14px;
+  outline: none;
+  text-indent: 0.5rem;
+  border-width: 1px;
+
   color: white;
   background-color: inherit;
 }
 
 .resultContainer {
   display: none;
+}
+
+@keyframes selecton {
+  /*animetion-nameで設定した値を書く*/
+
+  0% {
+    opacity: 1;
+  } /*アニメーション開始時は不透明度0%*/
+
+  20% {
+    opacity: 0.8;
+  } /*アニメーション開始時は不透明度0%*/
+
+  100% {
+    opacity: 1;
+  } /*アニメーション終了時は不透明度100%*/
 }
