--- a/app/components/Test.css
+++ b/app/components/Test.css
@@ -25,18 +25,23 @@
 
 .textwrap {
   max-height: 40vh;
-  background-color: #f0f0f0;
+  background-color: rgb(48, 54, 59);
   width: inherit;
   position: fixed;
   bottom: 0;
   overflow-y: auto;
 }
 
+.textwrap:hover {
+  animation: selectbody 200ms ease 1 normal;
+}
+
 .messagewrap {
   background-color: rgb(48, 54, 59);
   color: rgb(209, 209, 209);
   overflow-y: auto;
-  height: 75vh;
+  height: 80vh;
+  max-height: 80vh;
 }
 
 .messagewrap:hover {
