--- a/app/components/UserCard.scss
+++ b/app/components/UserCard.scss
@@ -10,17 +10,18 @@
 }
 
 .cap {
-  font-size: 8px;
+  width: 10px;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  border-radius: 25px;
   position: relative;
-  color: white;
-  right: 2px;
-  bottom: 13px;
-  border-radius: 5px;
-  background-color: #e24444;
 
-  transition: all 300ms 0s ease;
-  transition-timing-function: ease-in;
-  padding: 2px;
+  right: 3px;
+  bottom: 7px;
+  z-index: 9;
+  font-size: 7px;
+
+  background-color: rgb(218, 64, 64);
 }
 
 .cap:hover {
@@ -28,20 +29,21 @@
 }
 
 .live {
-  position: relative;
-  right: 10px;
   width: 10px;
   height: 10px;
-
-  border: solid 1px rgb(209, 209, 209);
   -webkit-border-radius: 25px;
   -moz-border-radius: 25px;
   border-radius: 25px;
+  border: solid 1px rgb(209, 209, 209);
+  position: relative;
+  right: 10px;
 }
 
 .container:hover {
   .live {
     border: none;
+    width: 11px;
+    height: 11px;
     background-color: rgb(72, 226, 131);
   }
 }
