--- a/app/components/UserSearch.scss
+++ b/app/components/UserSearch.scss
@@ -9,7 +9,11 @@
   border-bottom: solid 1px;
 }
 
-.container:hover {
+.data {
+  height: 200px;
+  overflow-y: auto;
+}
+.cdontainer:hover {
   max-height: 50vh;
   height: 50vh;
   overflow-y: auto;
