--- a/app/components/Test.css
+++ b/app/components/Test.css
@@ -42,6 +42,11 @@
   overflow-y: auto;
   height: 80vh;
   max-height: 80vh;
+
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .messagewrap:hover {
