--- a/app/app.global.scss
+++ b/app/app.global.scss
@@ -34,6 +34,10 @@ body {
 .editor-toolbar {
   height: inherit;
 }
+
+.editor-toolbar a {
+  height: inherit;
+}
 .editor-toolbar:before {
   margin-bottom: 0px;
 }
