add image preview box

--- a/app/app.global.scss
+++ b/app/app.global.scss
@@ -9,7 +9,9 @@ body {
   position: relative;
   height: 100vh;
   background-color: #f3f3f3;
-  font-family: '游ゴシック体', YuGothic, '游ゴシック', 'Yu Gothic';
+  font-family: 游ゴシック体, 'Yu Gothic', YuGothic, 'ヒラギノ角ゴシック Pro',
+    'Hiragino Kaku Gothic Pro', メイリオ, Meiryo, Osaka, 'ＭＳ Ｐゴシック',
+    'MS PGothic', sans-serif;
   overflow-y: hidden;
   overflow-x: hidden;
   margin: 0;
