--- a/app/components/Input.scss
+++ b/app/components/Input.scss
@@ -6,7 +6,7 @@
 
 .selected {
   display: block;
-  border-top: solid 1px;
+  border-top: solid 1px rgb(109, 109, 109);
   overflow: hidden;
   white-space: nowrap;
   overflow-x: auto;
