--- a/app/components/Log.css
+++ b/app/components/Log.css
@@ -2,14 +2,23 @@
   display: flex;
   height: 97.6vh;
   margin: 0;
-  color: black;
+  background-color: rgb(48, 54, 59);
 }
 
-.userList {
+.logDisplay {
   margin: 10px;
   display: block;
-  width: 30vw;
-  /*min-width: 18vw;*/
+  width: 25vw;
+  min-width: 18vw;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.messageDisplay {
+  margin: 10px;
+  display: block;
+  width: 60vw;
+  min-width: 18vw;
   overflow-y: auto;
   overflow-x: hidden;
 }
@@ -37,7 +46,13 @@
 .logs {
 }
 
+.log:hover {
+  color: #61dafb;
+  cursor: pointer;
+}
+
 details {
+  background-color: rgb(87, 88, 92);
   border: 1px solid #aaa;
   border-radius: 4px;
   padding: 0.5em 0.5em 0;
@@ -46,4 +61,5 @@ details {
 
 summary {
   outline: none;
+  color: white;
 }
