--- a/app/components/Log.css
+++ b/app/components/Log.css
@@ -2,7 +2,7 @@
   display: flex;
   height: 97.6vh;
   margin: 0;
-  background-color: rgb(48, 54, 59);
+  background-color: rgb(38, 41, 44);
 }
 
 .logDisplay {
@@ -17,7 +17,7 @@
 .messageDisplay {
   margin: 10px;
   display: block;
-  width: 60vw;
+  width: 75vw;
   min-width: 18vw;
   overflow-y: auto;
   overflow-x: hidden;
@@ -41,6 +41,16 @@
 
 .inputForm {
   margin-bottom: 10px;
+}
+
+.inputForm > div {
+  margin-bottom: 5px;
+}
+
+.inputForm > div > label {
+  margin-right: 10px;
+  width: 40px;
+  float: left;
 }
 
 .logs {
