--- a/app/app.global.scss
+++ b/app/app.global.scss
@@ -5,9 +5,13 @@
 @import '~@fortawesome/fontawesome-free/css/all.css';
 @import '~simplemde/dist/simplemde.min.css';
 
+html {
+  height: 100%;
+}
+
 body {
   position: relative;
-  height: 100vh;
+  height: 100%;
   background-color: #f3f3f3;
   font-family: 游ゴシック体, 'Yu Gothic', YuGothic, 'ヒラギノ角ゴシック Pro',
     'Hiragino Kaku Gothic Pro', メイリオ, Meiryo, Osaka, 'ＭＳ Ｐゴシック',
@@ -16,6 +20,10 @@ body {
   overflow-x: hidden;
   margin: 0;
   color: rgb(209, 209, 209);
+}
+
+#root {
+  height: 100%;
 }
 
 .CodeMirror,
