--- a/app/components/Log.css
+++ b/app/components/Log.css
@@ -1,38 +1,30 @@
 .container {
-  display: flex;
-  height: 97.6vh;
+  height: 100%;
   margin: 0;
   background-color: rgb(38, 41, 44);
 }
 
+.container .logDisplay {
+  display: inline-block;
+}
+
+.container .messageDisplay {
+  display: inline-block;
+}
+
 .logDisplay {
-  margin: 10px;
-  display: block;
-  width: 25vw;
+  height: 100%;
   min-width: 18vw;
   overflow-y: auto;
   overflow-x: hidden;
 }
 
 .messageDisplay {
-  margin: 10px;
-  display: block;
-  width: 75vw;
-  min-width: 18vw;
+  padding-left: 10px;
+  height: 100%;
+  width: 60%;
   overflow-y: auto;
   overflow-x: hidden;
-}
-
-.contentContainer {
-  width: 77vw;
-  overflow-y: auto;
-}
-
-.textwrap {
-  background-color: #f0f0f0;
-  width: inherit;
-  position: fixed;
-  bottom: 0;
 }
 
 .dump {
