--- a/app/components/Modal.css
+++ b/app/components/Modal.css
@@ -14,12 +14,12 @@
 
 /* Modal Content/Box */
 .modalcontent {
-  z-index: inherit;
+  z-index: 999999; /* Sit on top */
   background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
+  margin: 10% auto; /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
-  width: 50%; /* Could be more or less, depending on screen size */
+  width: 70%; /* Could be more or less, depending on screen size */
 }
 
 /* The Close Button */
