--- a/app/components/Test.scss
+++ b/app/components/Test.scss
@@ -1,3 +1,36 @@
+.rootcontainer {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.header {
+  height: 24px;
+}
+
+.body {
+  height: 100%;
+  width: 100%;
+}
+
+.body .d1 {
+  height: inherit;
+  display: inline-block;
+}
+
+.body .d2 {
+  height: inherit;
+  display: inline-block;
+}
+
+.d1 {
+  width: 60px;
+}
+
+.d2 {
+  width: calc(100% - 60px);
+}
+
 .container {
   height: 100%;
   margin: 0;
@@ -14,16 +47,21 @@
 .userList {
   height: 100%;
   width: 18vw;
-  overflow-y: auto;
-  overflow-x: hidden;
+  overflow: hidden;
   text-align: center;
   background-color: rgb(38, 41, 44);
+}
+
+.usercont {
+  overflow-y: auto;
+  height: calc(100% - 90px);
 }
 
 .contentContainer {
   height: 100%;
   display: block;
   width: calc(100% - 18vw);
+  overflow: hidden;
 
   background-color: rgb(73, 77, 80);
   color: rgb(209, 209, 209);
@@ -33,6 +71,7 @@
   max-height: 42vh;
   background-color: rgb(48, 54, 59);
   width: inherit;
+  height: 200px;
   position: fixed;
   bottom: 0;
   overflow-y: auto;
@@ -43,11 +82,9 @@
   color: rgb(209, 209, 209);
   overflow-y: auto;
 
-  height: 100%;
+  height: calc(100% - 224px);
   padding-right: 15px;
   padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
 }
 
 .goBottom {
@@ -63,7 +100,8 @@
 }
 
 .dump {
-  margin-bottom: 250px;
+  position: relative;
+  bottom: 100px;
 }
 
 @keyframes selecton {
