--- a/app/containers/Root.scss
+++ b/app/containers/Root.scss
@@ -1,6 +1,7 @@
 .container {
   width: 100%;
-  height: calc(100% - 24px);
+  height: 100%;
+  //  height: calc(100% - 24px);
 }
 .container .d1 {
   display: inline-block;
