--- a/app/app.global.scss
+++ b/app/app.global.scss
@@ -1,9 +1,14 @@
 /*
  * @NOTE: Prepend a `~` to css file paths that are in your node_modules
  *        See https://github.com/webpack-contrib/sass-loader#imports
+
+ @import '~@fortawesome/fontawesome-free/css/all.css';
  */
-@import '~@fortawesome/fontawesome-free/css/all.css';
+$fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
 @import '~simplemde/dist/simplemde.min.css';
+@import '~@fortawesome/fontawesome-free/scss/fontawesome';
+@import '~@fortawesome/fontawesome-free/scss/solid';
+@import '~@fortawesome/fontawesome-free/scss/regular';
 
 html {
   height: 100%;
