--- a/app/components/Log.css
+++ b/app/components/Log.css
@@ -1,3 +1,9 @@
+.rootcontainer {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 .container {
   height: 100%;
   margin: 0;
@@ -46,6 +52,7 @@
 }
 
 .logs {
+  padding-bottom: 40px;
 }
 
 .log:hover {
