--- a/app/app.global.scss
+++ b/app/app.global.scss
@@ -73,3 +73,11 @@ details {
 option {
   font-weight: 100;
 }
+
+.fa-plus-circle {
+  color: #28a745;
+}
+
+.fa-minus-circle {
+  color: #dc3545;
+}
