--- a/app/components/Log.css
+++ b/app/components/Log.css
@@ -7,7 +7,7 @@
 .container {
   height: 100%;
   margin: 0;
-  background-color: rgb(38, 41, 44);
+  /* background-color: rgb(38, 41, 44); */
 }
 
 .container .logDisplay {
