--- a/app/components/Input.scss
+++ b/app/components/Input.scss
@@ -1,7 +1,7 @@
 .container {
   color: rgb(209, 209, 209);
   margin-top: 0;
-  background-color: rgb(48, 54, 59);
+  background-color: var(--main-bg-color);
 }
 
 .selected {
