--- a/app/components/UserSearch.scss
+++ b/app/components/UserSearch.scss
@@ -5,9 +5,11 @@
   transition: all 300ms 0s ease;
   transition-timing-function: ease-in;
   padding-bottom: 5px;
-  border-bottom: solid 1px;
+  border-bottom: solid 1px var(--main-font-color);
 
   height: 60px;
+
+  background-color: var(--sub-bg-color);
 }
 
 .container input {
@@ -20,6 +22,6 @@
   text-indent: 0.5rem;
   border-width: 1px;
 
-  color: white;
-  background-color: inherit;
+  color: var(--main-font-color);
+  background-color: var(--main-bg-color);
 }
