--- a/app/containers/SidePannel.css
+++ b/app/containers/SidePannel.css
@@ -4,7 +4,7 @@
   text-align: center;
   overflow-y: auto;
   overflow-x: hidden;
-  background-color: rgb(48, 54, 59);
+  background-color: var(--main-header-color);
 }
 
 .container:hover {
