--- a/app/app.global.scss
+++ b/app/app.global.scss
@@ -18,14 +18,13 @@ html {
 body {
   position: relative;
   height: 100%;
-  background-color: #f3f3f3;
   font-family: 游ゴシック体, 'Yu Gothic', YuGothic, 'ヒラギノ角ゴシック Pro',
     'Hiragino Kaku Gothic Pro', メイリオ, Meiryo, Osaka, 'ＭＳ Ｐゴシック',
     'MS PGothic', sans-serif;
   overflow-y: hidden;
   overflow-x: hidden;
   margin: 0;
-  color: rgb(209, 209, 209);
+  background-color: #ffffff;
 }
 
 details {
