--- a/app/components/UserSearch.scss
+++ b/app/components/UserSearch.scss
@@ -4,23 +4,11 @@
   display: block;
   transition: all 300ms 0s ease;
   transition-timing-function: ease-in;
-  padding-bottom: 5px;
-
-  height: 60px;
 
   background-color: var(--sub-bg-color);
 }
 
-.container input {
-  font-size: 0.8rem;
-  width: 15vw;
-  height: 1.4rem;
-
-  border-radius: 14px;
-  outline: none;
-  text-indent: 0.5rem;
-  border-width: 1px;
-
-  color: var(--main-font-color);
-  background-color: var(--main-bg-color);
+.box {
+  position: relative;
+  bottom: 1rem;
 }
